выводить количество в торговых предложениях

--- a/storage/templates/storage/redesign/trading/trading.html
+++ b/storage/templates/storage/redesign/trading/trading.html
@@ -76,7 +76,7 @@
                 <tr id="offers_header">
                     <td class="j-t-one" style="width: max-content;">{% trans 'регион' context "trading" %}</td>
                     <td class="j-t-two ct__js-tablePC"></td>
-                    <td class="j-t-three" style="text-align: center;">{% trans 'товар' context "trading" %}</td>
+                    <td class="j-t-three" style="text-align: center;">{% trans 'количество' context "trading" %}</td>
                     <td class="j-t-four" style="text-align: center;">{% trans 'цена' context "trading" %}</td>
                     <td class="j-t-five" style="text-align: center;">{% trans 'продавец' context "trading" %}</td>
                     <td class="j-t-six ct__js-tablePC" style="text-align: center;"></td>
