--- a/storage/templates/storage/redesign/storage.html
+++ b/storage/templates/storage/redesign/storage.html
@@ -4,6 +4,7 @@
 {% load static %}
 {% load get_attr %}
 {% load get_mul %}
+{% load get_sum %}
 {% load get_verbose %}
 {% load check_up_limit %}
 {% load dict_key %}
@@ -212,7 +213,7 @@
 		<!--улучшить-->
 		<div class="store__modal1-container">
 			<h2 class="store__modal1-title">{% trans 'Улучшение склада' context "storage_upgrade" %}</h2>
-			<p>{% trans 'Вы можете улучшить Склад, расширив хранилища части товаров' context "storage_upgrade" %}</p>
+			<p>{% trans 'Вы можете улучшить Склад, расширив его хранилища' context "storage_upgrade" %}</p>
 			<p>{% trans 'Стоимость' context "storage_upgrade" %}: 500 {% trans 'Сталь' context "goods" %}, 500 {% trans 'Алюминий' context "goods" %}</p>
 			{% if limit_upgrade %}
 			<h2 class="store__modal1-title" style="color: var(--c10two);">{% trans 'Максимальный уровень' context "storage_upgrade" %}</h2>
@@ -255,7 +256,7 @@
 
 		<!--заголовок-->
 		<h2 class="store__modal2-title ct__page-title">{% trans 'Улучшение склада' context "storage_upgrade" %}</h2>
-		<p>{% trans 'Выберите товары в каждой из категорий, ёмкость Склада для которых будет увеличена' context "storage_upgrade" %}</p>
+		<p>{% trans 'После подтверждения улучшения Склада, его ёмкость изменится следующим образом' context "storage_upgrade" %}</p>
 
 		<!--линия-->
 		<div class="store__modal2-line ct__line"></div>
@@ -263,25 +264,9 @@
 		<!--список1-->
 		<div class="store__modal2-list-container">
 			<h3>{% trans 'Большой объём запасов' context "storage_upgrade" %}</h3>
-			(<div style="display: inline-block"><div id="large_upgrade_counter" style="display: inline-block">0</div> / {{ large_limit }} </div>)
-			<ul class="store__modal2-list">
-				{% for good in storage|get_attr:'sizes'|dict_key:'large' %}
-					{% with 'large' as size %}
-						{% check_up_limit storage good size as limited %}
-
-						{% if not limited %}
-				<li class="store__modal2-item">
-					<div class="store__modal2-item-btns">
-						<button data-good="{{ good }}" class="up_minus"><svg><use xlink:href="#minus"></use></svg></button>
-						<span data-size="large" class="up_count">0</span>
-						<button data-good="{{ good }}" class="up_plus"><svg><use xlink:href="#plus"></use></svg></button>
-					</div>
-					<span class="store__modal2-item-text">{{ good|get_verbose|truncatechars:12 }}</span>
-				</li>
-						{% endif %}
-					{% endwith %}
-				{% endfor %}
-			</ul>
+			{% with cap_val=storage|get_attr:'large_cap' %}
+			<div style="display: inline-block" class="ct__page-title">{{ cap_val }} ➝ {{ cap_val|get_sum:120000 }} </div>
+			{% endwith %}
 		</div>
 
 		<!--линия-->
@@ -290,25 +275,9 @@
 		<!--список2-->
 		<div class="store__modal2-list-container">
 			<h3>{% trans 'Средний объём запасов' context "storage_upgrade" %}</h3>
-			(<div style="display: inline-block"><div id="medium_upgrade_counter" style="display: inline-block">0</div> / {{ medium_limit }} </div>)
-			<ul class="store__modal2-list">
-				{% for good in storage|get_attr:'sizes'|dict_key:'medium' %}
-					{% with 'medium' as size %}
-						{% check_up_limit storage good size as limited %}
-
-						{% if not limited %}
-				<li class="store__modal2-item">
-					<div class="store__modal2-item-btns">
-						<button data-good="{{ good }}" class="up_minus"><svg><use xlink:href="#minus"></use></svg></button>
-						<span data-size="medium" class="up_count">0</span>
-						<button data-good="{{ good }}" class="up_plus"><svg><use xlink:href="#plus"></use></svg></button>
-					</div>
-					<span class="store__modal2-item-text">{{ good|get_verbose|truncatechars:9 }}</span>
-				</li>
-						{% endif %}
-					{% endwith %}
-				{% endfor %}
-			</ul>
+			{% with cap_val=storage|get_attr:'medium_cap' %}
+			<div style="display: inline-block" class="ct__page-title">{{ cap_val }} ➝ {{ cap_val|get_sum:20000 }} </div>
+			{% endwith %}
 		</div>
 
 		<!--линия-->
@@ -317,25 +286,9 @@
 		<!--список3-->
 		<div class="store__modal2-list-container">
 			<h3>{% trans 'Малый объём запасов' context "storage_upgrade" %}</h3>
-			(<div style="display: inline-block"><div id="small_upgrade_counter" style="display: inline-block">0</div> / {{ small_limit }} </div>)
-			<ul class="store__modal2-list">
-				{% for good in storage|get_attr:'sizes'|dict_key:'small' %}
-					{% with 'small' as size %}
-						{% check_up_limit storage good size as limited %}
-
-						{% if not limited %}
-				<li class="store__modal2-item">
-					<div class="store__modal2-item-btns">
-						<button data-good="{{ good }}" class="up_minus"><svg><use xlink:href="#minus"></use></svg></button>
-						<span data-size="small" class="up_count">0</span>
-						<button data-good="{{ good }}" class="up_plus"><svg><use xlink:href="#plus"></use></svg></button>
-					</div>
-					<span class="store__modal2-item-text">{{ good|get_verbose|truncatechars:9 }}</span>
-				</li>
-						{% endif %}
-					{% endwith %}
-				{% endfor %}
-			</ul>
+			{% with cap_val=storage|get_attr:'small_cap' %}
+			<div style="display: inline-block" class="ct__page-title">{{ cap_val }} ➝ {{ cap_val|get_sum:2000 }} </div>
+			{% endwith %}
 		</div>
 
 		<!--линия-->
