--- a/player/templates/player/redesign/profile.html
+++ b/player/templates/player/redesign/profile.html
@@ -357,7 +357,7 @@
 				</div>
 				<div class="btn-r-wrapper">
 					<button type="button" class="btn btn-default back-crop-js" data-dismiss="modal">{% trans 'Отмена' %}</button>
-					<button type="button" class="btn btn-primary js-crop-and-upload">{% trans 'Загрузить' %}, -100 G</button>
+					<button type="button" class="btn btn-primary js-crop-and-upload">{% trans 'Загрузить' %}{% if player.image %}, -100 G{% endif %}</button>
 				</div>
 			</div>
 		</div>
