--- a/player/templates/player/redesign/profile.html
+++ b/player/templates/player/redesign/profile.html
@@ -193,7 +193,7 @@
 					</p>
 				</div>
 
-				<div class="ct__s" onclick="window.location.href = '/skill_top/'" style="cursor: pointer;">
+				<div class="ct__s">
 					<h2 class="ct__s-title">{% trans 'характеристики' context "profile" %}</h2>
 					<p class="ct__s-text">
 						<font color="FF0000">{{ player.power }}</font>
@@ -201,6 +201,9 @@
 						<font color="337AB7">{{ player.knowledge }}</font>
 						/
 						<font color="#18D04C">{{ player.endurance }}</font>
+						<a href="/skill_top/">
+							{% trans '(к рейтингу)' context "profile" %}
+						</a>
 					</p>
 				</div>
 
